feat(api): 完成论文检索RESTful接口及TDD全流程测试

--- a/docs/技术方案设计.md
+++ b/docs/技术方案设计.md
@@ -235,37 +235,4 @@ flowchart TD
 
 ---
 
-## *六、开发与测试规范*
-
-- ***开发规范***
-
-  - *前后端均需详细注释、接口文档（Swagger/OpenAPI、Storybook等）。*
-  - *代码风格统一，提交前自动格式化与静态检查。*
-  - *采用分支开发、代码评审、自动化测试流程。*
-- ***测试策略***
-
-  - *前端：Jest + React Testing Library，覆盖组件、页面、接口交互。*
-  - *后端：pytest + httpx，覆盖API、业务逻辑、异常分支。*
-  - *集成测试：端到端自动化测试（如Cypress、Playwright）。*
-  - *性能测试：接口QPS、响应时延、并发压力测试。*
-  - *安全测试：接口权限、Token泄露、SQL注入、XSS等。*
-- ***CI/CD流程***
-
-  - *代码提交自动触发单元测试、构建、镜像打包。*
-  - *通过后自动部署到测试/生产环境。*
-  - *失败自动告警，日志可追溯。*
-- ***数据库测试***
-
-  - *所有数据同步、刷新、冲突处理需有单元与集成测试覆盖。*
-
----
-
-## 开发日志（TDD循环记录）
-
-- 2024-06-10：
-  - 按TDD流程，基于需求与技术方案，完成后端学者检索RESTful API（/api/scholars）开发。
-  - 设计并实现了覆盖正常、异常、边界、权限等场景的详细测试用例。
-  - 测试用例全部通过，接口功能与安全性符合预期。
-  - 项目采用venv进行Python环境隔离，依赖管理规范。
-  - 代码与测试均有详细注释，接口支持OpenAPI文档。
-  - 下一步将继续推进论文/专利检索API、数据库持久化、前端开发等TDD循环。
+> 开发日志已独立存储于 docs/dev_log.md，请查阅该文件获取各阶段TDD循环的详细记录。
